vlib/v/parser/tests/duplicate_type_a.out
vlib/v/parser/tests/duplicate_type_a.v:3:11: error: cannot register interface `Foo`, another type with this name exists
    1 | struct Foo {}
    2 |
    3 | interface Foo {}
      |           ~~~
